[package]
name = "push_through"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
const_format = "0.2"
env_logger = "0.9"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.4"
